--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </header>
-
+        <img src="/style/pictures/Notebook.jpg" alt="">
 
         <main class="content indent">
             <!-- каталог товаров -->
