--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
     <div class="container">
         <header class="header ">
             <div class="wrapped indent">
-                <a class="logo" href="index.html">f.palace</a>
+                <a class="logo" href="index.html"> QPICK</a>
 
                 <div class="rightHeader">
-                    <img class="bars" src="style/pictures/bars.png" alt="bars">
-                    <img class="cabinet_btn" src="style/pictures/user.png" alt="user">
-                    <span class="cartIconWrap">
-                        <img class="cartIcon" src="style/pictures/cart.png" alt="cart">
+                    <span class="IconWrap like_list">
+                        <img class="" src="style/pictures/like_list.png" alt="like_list">
                         <span>0</span>
+                    </span>
+
+                    <span class="IconWrap cartIcon">
+                        <img class="" src="style/pictures/cart.png" alt="cart">
+                        <span>0</span>
+                    </span>
+
+                    <span class="IconWrap menuIcon">
+                        <img class="" src="style/pictures/menu.png" alt="menu">
                     </span>
 
                     <div class="basket hidden">
@@ -37,9 +44,16 @@
                 </div>
             </div>
         </header>
-        <img src="/style/pictures/Notebook.jpg" alt="">
 
         <main class="content indent">
+            <div class="wrapped_banner">
+                <div class="banner">
+                    <p class="text_banner">
+                        Аксессуары для <br>
+                        Iphone 13 Pro Max
+                    </p>
+                </div>
+            </div>
             <!-- каталог товаров -->
             <div class="products"></div>
         </main>
