add:basket.js, buttons.js, likes.js

--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
         </footer>
     </div>
     <!-- каталог товаров -->
-    <script src="./js/main.js"></script>
+    <script src="./js/ProductDTO.js"></script>
+
+    <!-- каталог товаров -->
+    <script src="./js/buttons.js"></script>
+
+    <!-- корзина -->
+    <script src="./js/basket.js"></script>
+
+    <!-- каталог товаров -->
+    <script src="./js/likes.js"></script>
 </body>
 
 </html>
