добавил класс корзины и метод подсчёта суммы товаров

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             </div>
         </footer>
     </div>
+    <!-- массив товаров -->
+    <script src="./js/goods.js"></script>
+
     <!-- каталог товаров -->
     <script src="./js/ProductDTO.js"></script>
 
@@ -76,6 +79,9 @@
 
     <!-- каталог товаров -->
     <script src="./js/likes.js"></script>
+
+
+
 </body>
 
 </html>
