--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
             </div>
         </footer>
     </div>
-    <!-- массив товаров -->
-    <script src="./js/goods.js"></script>
 
     <!-- каталог товаров -->
     <script src="./js/ProductDTO.js"></script>
@@ -75,12 +73,10 @@
     <script src="./js/buttons.js"></script>
 
     <!-- корзина -->
-    <script src="./js/basket.js"></script>
+    <!-- <script src="./js/basket.js"></script> -->
 
     <!-- каталог товаров -->
     <script src="./js/likes.js"></script>
-
-
 
 </body>
 
