--- a/basket.html
+++ b/basket.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Интернет-магазин</title>
+    <title>QPICK корзина</title>
     <link rel="stylesheet" href="style/css/style.css">
 </head>
 
@@ -36,16 +36,7 @@
     </div>
 </header>
         <main class="content indent">
-            <div class="wrapped_banner">
-                <div class="banner">
-                    <p class="text_banner">
-                        Аксессуары для <br>
-                        Iphone 13 Pro Max
-                    </p>
-                </div>
-            </div>
-            <!-- каталог товаров -->
-            <div class="products"></div>
+            <div class="cart-block_2"> </div>
         </main>
 
 <footer class="footer">
@@ -59,7 +50,7 @@
     <script src="./js/ProductDTO.js"></script>
 
     <!-- кнопки -->
-    <script src="./js/buttons.js"></script>
+    <!-- <script src="./js/buttons.js"></script> -->
 
     <!-- каталог товаров -->
     <script src="./js/likes.js"></script>
