--- a/basket.html
+++ b/basket.html
@@ -41,8 +41,9 @@
 
 <footer class="footer">
     <div class="wrapped_footer indent">
+        <a class="logo" href="index.html"> QPICK</a>
 
-        <p>footer</p>
+        <a href="feedback.html"> форма обратной связи</a>
     </div>
 </footer>    </div>
 
