--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 
 <footer class="footer">
     <div class="wrapped_footer indent">
+        <a class="logo" href="index.html"> QPICK</a>
 
-        <p>footer</p>
+        <a href="feedback.html"> форма обратной связи</a>
     </div>
 </footer>    </div>
 
