--- a/style/footer.html
+++ b/style/footer.html
@@ -1,6 +1,7 @@
 <footer class="footer">
     <div class="wrapped_footer indent">
+        <a class="logo" href="index.html"> QPICK</a>
 
-        <p>footer</p>
+        <a href="feedback.html"> форма обратной связи</a>
     </div>
 </footer>
